Changes required for Bug 1057851:Alignment issue at search popup. changes control the width and end the searchresults with ellipsis in case of overflow.

--- a/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Web/wwwroot/css/site.css
+++ b/tree/master/cloud/src/solution/Microsoft.Legal.MatterCenter.Web/wwwroot/css/site.css
@@ -739,13 +739,11 @@ textarea {
     border-radius: 0;
 }
 
-#docsearchmatter ul {
-    width: 83.3%;
-}
-
-#searchmatter ul li a {
+#docsearchmatter ul li a, #searchmatter ul li a {
     height: 30px;
     padding: 5px 10px;
+    overflow:hidden;
+    text-overflow:ellipsis;
 }
 
     #searchmatter ul li a:hover {
